--- a/php_files/terms.css
+++ b/php_files/terms.css
@@ -3,8 +3,8 @@
 .logo-size{width:360px; height:90px;}
 .case-1{width:78%;background-color:#0075D8;text-align:center;margin-left:10%; padding:6px;margin-top:10px;}
 .case-2{width:100%;background-color:#DEDEDE;text-align:center;margin-top:0px; padding:0%;}
-.big-font{font-family:'Century Gothic';font-size:33px;color:#333333;padding:9px;margin:0px;widrth:100%;}
-.medium-font{font-family:'Century Gothic';font-size:20px;color:#333333;padding:9px;margin:0px;widrth:100%;}
+.big-font{font-family:'Century Gothic';font-size:33px;color:#333333;padding:9px;margin:0px; }
+.medium-font{font-family:'Century Gothic';font-size:20px;color:#333333;padding:9px;margin:0px; }
 .terms-div{width:94%; background-color:#ffffff;font-family:'Century Gothic';color:#111111;text-align:left;padding:3%;}
 .small-font{font-size:13px;}
 
@@ -14,8 +14,8 @@
 	.logo-size{width:300px; height:80px;}
 	.case-1{width:86%;background-color:#0075D8;text-align:center;margin-left:6%; padding:6px;margin-top:10px;}
 	.case-2{width:100%;background-color:#DEDEDE;text-align:center;margin-top:0px; padding:0%;}
-	.big-font{font-family:'Century Gothic';font-size:28px;color:#333333;padding:9px;margin:0px;widrth:100%;}
-	.medium-font{font-family:'Century Gothic';font-size:17px;color:#333333;padding:9px;margin:0px;widrth:100%;}
+	.big-font{font-family:'Century Gothic';font-size:28px;color:#333333;padding:9px;margin:0px; }
+	.medium-font{font-family:'Century Gothic';font-size:17px;color:#333333;padding:9px;margin:0px; }
 	.terms-div{width:94%; background-color:#ffffff;font-family:'Century Gothic';color:#111111;text-align:left;padding:3%;}
 }
 
@@ -25,8 +25,8 @@
 	.logo-size{width:260px; height:70px;}
 	.case-1{width:86%;background-color:#0075D8;text-align:center;margin-left:6%; padding:6px;margin-top:10px;}
 	.case-2{width:100%;background-color:#DEDEDE;text-align:center;margin-top:0px; padding:0%;}
-	.big-font{font-family:'Century Gothic';font-size:24px;color:#333333;padding:9px;margin:0px;widrth:100%;}
-	.medium-font{font-family:'Century Gothic';font-size:15px;color:#333333;padding:9px;margin:0px;widrth:100%;}
+	.big-font{font-family:'Century Gothic';font-size:24px;color:#333333;padding:9px;margin:0px; }
+	.medium-font{font-family:'Century Gothic';font-size:15px;color:#333333;padding:9px;margin:0px; }
 	.terms-div{width:94%; background-color:#ffffff;font-family:'Century Gothic';color:#111111;text-align:left;padding:3%;}
 }
 
@@ -36,8 +36,8 @@
 	.logo-size{width:220px; height:60px;}
 	.case-1{width:90%;background-color:#0075D8;text-align:center;margin-left:4%; padding:6px;margin-top:10px;}
 	.case-2{width:100%;background-color:#DEDEDE;text-align:center;margin-top:0px; padding:0%;}
-	.big-font{font-family:'Century Gothic';font-size:21px;color:#333333;padding:9px;margin:0px;widrth:100%;}
-	.medium-font{font-family:'Century Gothic';font-size:14px;color:#333333;padding:9px;margin:0px;widrth:100%;}
+	.big-font{font-family:'Century Gothic';font-size:21px;color:#333333;padding:9px;margin:0px;}
+	.medium-font{font-family:'Century Gothic';font-size:14px;color:#333333;padding:9px;margin:0px; }
 	.terms-div{width:94%; background-color:#ffffff;font-family:'Century Gothic';color:#111111;text-align:left;padding:3%;}
 	.small-font{font-size:12px;}
 }
